# sentinel

./: .gitignore  README.md  intel_agent.py  main.py  nginx.conf  pyproject.toml  render.yaml  run_cluster.sh  run_ui.py
8d5a2a0c-4027-4d3b-9e01-c24b72a8ddc1/: rag_implementation_plan.md.metadata.json  rag_implementation_plan.md.resolved
8d5a2a0c-4027-4d3b-9e01-c24b72a8ddc1/.system_generated/logs/: overview.txt
8d5a2a0c-4027-4d3b-9e01-c24b72a8ddc1/.system_generated/steps/129/: output.txt
docs/: README.md
pew_reports/: metadata.jsonl
scratch/: test_keys.py  test_timeout.py
scripts/: fit_bm25.py  ingest_documents.py  migrate_legacy_data.py  pew_scraper.py  setup_pinecone.py
src/: __init__.py  config.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/nodes/: __init__.py  citation_agent.py  cross_examiner.py  lead_researcher.py  subagent.py  sufficiency_evaluator.py  synthesis.py  timeline_compiler.py
src/core/: rate_limiter.py  redis_state.py
src/tools/: __init__.py  fetch.py  llm.py  qa_cache.py  rag_search.py  search.py  smart_search.py  voice.py
src/web/: app.py  db.py
src/web/static/: app.js  index.html  style.css  voice.js
