[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "supabase>=2.31.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.8.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "trafilatura>=2.1.0",
    "pypdf>=4.2.0",
    "flashrank>=0.2.8",
    "pinecone>=5.0.0",
    "fastembed>=0.3.0",
]
